This file holds the changes of the AIT QKD R10 throughout the versions
======================================================================


Changes from 9.9999.7 to 9.9999.8
---------------------------------

* introduced key data encoding

    A key has now an associated key data encoding. This encoding
    is an arbitrary human readable text describing the bit pattern
    and layout of the key's data().

* switch from Qt4 to Qt5

    We switched from Qt4 to Qt5, thus temporarily disabling the
    qkd-module-manager fully.

* new key states:

    KEY_STATE_NEW: a brand new key.
    KEY_STATE_TAINTED: a key for which authentication failed.

* qkd-key-dump new option: "--md5sum" and "--md5sum-all"

    The new "--md5sum" option dumps the MD5 hash sum of each
    key material to stdout (a single MD5 for _each_ key).

    The new "--md5sum-all" option generates the MD5 hash sum
    of all key material in the key stream file (a single
    MD5 for _all_ keys).
    
    Hence, only the key material itself is taken into account
    and not the key id, the metadata or anything else.

* qkd-key-dump new option: "--metadata"

    The new "--metadata" option dumps the content of each key
    metadata as XML to stdout.
    
    This can be used to make the history of the key visible.

* qkd-key-compare new option: "--brief"

    The new "--brief" option compares only the content of 
    the key material of two key files, i.e. it does not check
    each key metadata.
    
    If both key data sets are equal qkd-key-compare exits now with 0,
    if key data material differ it exits with 1.

* new key metadata concept

    WARNING: MASSIVE API CHANGE!
    
    We changed the key's metadata concept. Instead having a fixed
    static number of values, we turned into a flexible metadata
    model.
    
    A key's metadata is now stored as a XML document. It has this
    shape (example):
    
            <?xml version="1.0" encoding="utf-8"?>
            <key id="2">