@@ -1,7 +1,7 @@
 # ------------------------------------------------------------
 # CMakeLists.txt 
 # 
-# make: qkd/bin/tools
+# make: qkd/bin/tools/qkd-key-slice
 #
 # Author: Oliver Maurhart, <oliver.maurhart@ait.ac.at>
 #
@@ -29,18 +29,20 @@
 
 
 # ------------------------------------------------------------
-# go through the subs
+# tools/qkd-key-slice
 
-add_subdirectory(q3p-keystore-dump)
-add_subdirectory(q3p-mq-reader)
-add_subdirectory(qkd-blob-keystream)
-add_subdirectory(qkd-key-compare)
-add_subdirectory(qkd-key-dump)
-add_subdirectory(qkd-key-gen)
-add_subdirectory(qkd-key-slice)
-add_subdirectory(qkd-pipeline)
-# TODO: qkd-module-manager needs a full wrapup in Qt5
-#add_subdirectory(qkd-module-manager)
-add_subdirectory(qkd-statistics-average)
-add_subdirectory(qkd-simulate)
-add_subdirectory(qkd-view)
+# sources
+set(QKD_KEY_SLICE_SRC
+    main.cpp
+)
+
+# bin definition
+add_executable(qkd-key-slice ${QKD_KEY_SLICE_SRC})
+add_dependencies(qkd-key-slice qkd)
+
+# linkage
+target_link_libraries(qkd-key-slice qkd ${CMAKE_REQUIRED_LIBRARIES})
+
+# install
+install(TARGETS qkd-key-slice RUNTIME DESTINATION bin COMPONENT tools)
+
