@@ -50,6 +50,7 @@ target_link_libraries(test-tabular-writer       ${CMAKE_REQUIRED_LIBRARIES})
 # tools test
 configure_file(test-qkd-key-compare             ${CMAKE_CURRENT_BINARY_DIR}/test-qkd-key-compare            @ONLY)
 configure_file(test-qkd-key-gen                 ${CMAKE_CURRENT_BINARY_DIR}/test-qkd-key-gen                @ONLY)
+configure_file(test-qkd-key-slice               ${CMAKE_CURRENT_BINARY_DIR}/test-qkd-key-slice              @ONLY)
 configure_file(test-qkd-pipeline                ${CMAKE_CURRENT_BINARY_DIR}/test-qkd-pipeline               @ONLY)
 configure_file(test-qkd-pipeline-autoconnect    ${CMAKE_CURRENT_BINARY_DIR}/test-qkd-pipeline-autoconnect   @ONLY)
 configure_file(test-qkd-statistics-average      ${CMAKE_CURRENT_BINARY_DIR}/test-qkd-statistics-average     @ONLY)
@@ -63,4 +64,3 @@ configure_file(test-pipeline-sifting            ${CMAKE_CURRENT_BINARY_DIR}/test
 add_test(qkd-pipeline                           ${CMAKE_CURRENT_BINARY_DIR}/test-qkd-pipeline)
 add_test(qkd-pipeline-autoconnect               ${CMAKE_CURRENT_BINARY_DIR}/test-qkd-pipeline-autoconnect)
 add_test(qkd-qkd-statistics-average             ${CMAKE_CURRENT_BINARY_DIR}/test-qkd-statistics-average)
-
