@@ -1,0 +1,69 @@
+#!/bin/bash
+
+# ------------------------------------------------------------
+# test-qkd-key-slice
+# 
+# This is a test file.
+#
+# TEST: test the qkd-key-slice tool
+#
+# Author: Oliver Maurhart, <oliver.maurhart@ait.ac.at>
+#
+# Copyright (C) 2013-2016 AIT Austrian Institute of Technology
+# AIT Austrian Institute of Technology GmbH
+# Donau-City-Strasse 1 | 1220 Vienna | Austria
+# http://www.ait.ac.at
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation version 2.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, 
+# Boston, MA  02110-1301, USA.
+# ------------------------------------------------------------
+
+
+# base source
+export TEST_BASE="@CMAKE_BINARY_DIR@"
+source ${TEST_BASE}/test/bin/test-functions
+
+# ------------------------------------------------------------
+
+# init test environment
+test_init "$(basename $0).d"
+
+rm -rf cat_keys.* &> /dev/null
+KEYS_TO_PROCESS="100"
+${TEST_BASE}/bin/qkd-key-gen --silent --size 2048 --keys ${KEYS_TO_PROCESS} --rate 0.03 cat_keys
+
+${TEST_BASE}/bin/qkd-key-slice --input-file cat_keys.alice --keys 20 > slice_1-20.keys
+cat cat_keys.alice | ${TEST_BASE}/bin/qkd-key-slice --keys 40 --skip 20 > slice_21-60.keys
+${TEST_BASE}/bin/qkd-key-slice --input-file cat_keys.alice --skip 60 > slice_61-100.keys
+
+if [ $(${TEST_BASE}/bin/qkd-key-dump --short slice_1-20.keys | wc -l) != "21" ]; then
+    echo "first slice failed"
+    exit 1
+fi
+if [ $(${TEST_BASE}/bin/qkd-key-dump --short slice_21-60.keys | wc -l) != "41" ]; then
+    echo "second slice failed"
+    exit 1
+fi
+if [ $(${TEST_BASE}/bin/qkd-key-dump --short slice_61-100.keys | wc -l) != "41" ]; then
+    echo "third slice failed"
+    exit 1
+fi
+
+cat slice_1-20.keys slice_21-60.keys slice_61-100.keys > rebuild.keys
+diff -q cat_keys.alice rebuild.keys
+if [ "$?" != "0" ]; then
+    echo "rebuild key of slices differs from original key"
+fi
+
+echo "=== TEST SUCCESS ==="
