@@ -5,6 +5,11 @@ This file holds the changes of the AIT QKD R10 throughout the versions
 Changes from 9.9999.7 to 9.9999.8
 ---------------------------------
 
+* added qkd-key-slice tool
+
+    The qkd-key-slice tool can extract amount of keys
+    from a keystream file.
+
 * introduced key data encoding
 
     A key has now an associated key data encoding. This encoding
